--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -176,8 +176,8 @@
 }
 @media only screen and (max-width: 1025px) {
   .career-section {
-    padding: 80px 20px;
-    margin-top: 0;
+    padding: 60px 20px 80px;
+    margin-top: 20px;
     margin-bottom: 0;
     box-sizing: border-box;
   }
